# gtmos

./: .gitignore  Cargo.toml  GNUmakefile  LICENSE-MIT  Makefile  README.md  build.rs  limine.conf
.devcontainer/: Dockerfile  devcontainer.json
OVMFbin/: OVMF_VARS-pure-efi.fd
build-aux/: version.mk
gnu-efi/: Make.defaults
kernel/: .gitignore  Cargo.toml  GNUmakefile  Makefile  get-deps  linker-aarch64.ld  linker-loongarch64.ld  linker-riscv64.ld  linker-x86_64.ld
kernel/libc/: algorithm  array  atomic  cfloat  climits  coroutine  cstdarg  cstdbool  cstddef  cstdint  cstr.c  cstr.h  float.h  initializer_list  iso646.h  iterator  limits.h  memory  memory.c  memory.h  new  source_location  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  stdnoreturn.h  tuple  type_traits  utility
kernel/libc/gtmos/hal/: vfs.h
kernel/libk/dev/: efi.cpp  serial.c  serial.h
kernel/libk/dev/efi/: efi.cpp  efi.h
kernel/libk/dev/memory/: allocator.cpp  allocator.hpp  memory.cpp  memory.hpp
kernel/libk/dev/serial/: serial.c
kernel/libk/gtmos/: arch.c  arch.h  io.c  io.h  kvfs.cpp  kvfs.h  panic.cpp  panic.h
kernel/libk/utils/: bitmap.cpp  bitmap.hpp
kernel/src/: conf.cpp  framebuffer.rs  kernel.cpp  main.cpp  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64_impl/: allocator.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs
kernel/src/arch/x86_64_impl/allocator/: fixed_size_block.rs
kernel/src/arch/x86_64_impl/task/: mod.rs
kernel/src/libc/: panic.cpp  vfs.cpp  vfs.hpp
kernel/src/libk/: panic.cpp
kernel/src/task/: keyboard.rs
(+6 files in other folders)
